# AI

./: .gitignore  Dockerfile  README.md  api_test.py  docker-compose.yml  in_out_main.py  main.py  pyproject.toml  requirements.txt  settings.py  test_api.py  tests.py
ai/: classes.py  lance.py  manager.py
auth/: models.py
chats/: enums.py  models.py  schemas.py
common/: enums.py  exceptions.py  models.py  schemas.py  utils.py
database/: engine.py  env.py  local_session.py  script.py.mako
database/versions/: 00456645b544_add_descriptions.py  0a6151b244d4_add_staff_flag_for_user.py  240c2bb448d9_migration.py  2c83650b4b72___name__.py  339a22e3f689_migrate.py  58f05c41e1c3_merge_message_cost.py  64bacaae8626_init.py  6552c088408a_add_cost_to_message.py  72585cc7bafd_add_hashed_password_column_to_user_table.py  ab3fd02b7c1f_.py  b87f46edb110_pk_uuid.py  cb5cc7bcf8aa_.py
src/: chroma.py  chroma_manager.py  classes.py  database.py  enums.py  manager.py  prompts.py  schemas.py  tests.py
src/admin/: models.py  routes.py  utils.py
templates/: configs.html  create_config.html  edit_config.html  logs.html
users/: models.py  permissions.py
