[tool.poetry]
name = "ai-integration"
version = "0.1.0"
description = ""
authors = ["Nazareka <nazar26032002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
langchain = "0.0.281"
pydantic = "1.10.12"
fastapi = "0.103.1"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
pytest = "^7.4.2"
openai = "0.28.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
