[tool.poetry]
name = "ai-integration"
version = "0.1.0"
description = ""
authors = ["Nazareka <nazar26032002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
langchain = "0.0.321"
pydantic = "1.10.12"
fastapi = "0.99.1"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
pytest = "^7.4.2"
openai = "0.28.0"
chromadb = "0.4.10"
tiktoken = "0.5.1"
sentence-transformers = "2.2.2"
torch = "2.0.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}
motor = "^3.3.1"
pymongo = "^4.5.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
